service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: svc1
  labels:
    app: pod1
spec:
  selector:
    app: pod1
  type: NodePort
  ports:
  - port: 8090
    targetPort: 8090
